Fixed a markdown width / wrap bug

--- a/webui/packages/eidolon-components/src/client/messages/eidolon-markdown.module.css
+++ b/webui/packages/eidolon-components/src/client/messages/eidolon-markdown.module.css
@@ -90,6 +90,7 @@
 
 .markdown pre {
     font-size: .9em;
+    text-wrap: pretty;
 }
 
 .markdown p code {
